--- a/index.html
+++ b/index.html
@@ -721,6 +721,16 @@
           </div>
         </div>
 
+        <div class="swiper-slide">
+          <div class="project-card">
+            <img src="./images/engineering study.png" alt="Project 5" />
+            <h3>SpendWise</h3>
+            <p>SpendWise is a smart expense tracker app that helps users manage their daily finances by categorizing expenses, setting budgets, and providing insightful spending analytics.</p>
+            <a href="https://celebrated-bienenstitch-55b83c.netlify.app/" class="spacing" target="_blank"><i class="fa-solid fa-eye" style="color: #000000;"></i> View Project</a>
+            <a href="https://github.com/Sumitkumbhar15/SpendWise" class="spacing" target="_blank"><i class="fa-brands fa-github" style="color: #000000;"></i> GitHub</a>
+          </div>
+        </div>
+
       </div>
       <!-- Pagination -->
       <div class="swiper-pagination"></div>
