--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@
 
         <div class="swiper-slide">
           <div class="project-card">
-            <img src="./images/engineering study.png" alt="Project 5" />
+            <img src="./images/spendwise.png" alt="Project 5" />
             <h3>SpendWise</h3>
             <p>SpendWise is a smart expense tracker app that helps users manage their daily finances by categorizing expenses, setting budgets, and providing insightful spending analytics.</p>
             <a href="https://celebrated-bienenstitch-55b83c.netlify.app/" class="spacing" target="_blank"><i class="fa-solid fa-eye" style="color: #000000;"></i> View Project</a>
